(feat) update user is manager from tea ms route + added response to teams routes
