# backend/cmd/server/docs/swagger.yaml
@@ -97,6 +97,13 @@ definitions:
       uuid:
         type: string
     type: object
+  model.TeamUpdate:
+    properties:
+      description:
+        type: string
+      name:
+        type: string
+    type: object
   model.UserCreate:
     properties:
       email:
@@ -420,6 +427,36 @@ paths:
       summary: Create a new team
       tags:
       - Teams
+  /teams/{team_uuid}/users/{user_uuid}/edit-manager-status:
+    put:
+      consumes:
+      - application/json
+      description: "Updates a team member's manager status by team UUID and user UUID.
+        \U0001F512 Requires role: **admin**"
+      parameters:
+      - description: Team UUID
+        in: path
+        name: team_uuid
+        required: true
+        type: string
+      - description: User UUID
+        in: path
+        name: user_uuid
+        required: true
+        type: string
+      - description: Is Manager Status (1 = true, 0 = false)
+        in: path
+        name: is_manager
+        required: true
+        type: boolean
+      responses:
+        "200":
+          description: Status updated successfully
+      security:
+      - BearerAuth: []
+      summary: Update team member manager status
+      tags:
+      - Teams
   /teams/{uuid}:
     delete:
       description: "Deletes a team by the provided UUID. \U0001F512 Requires role:
@@ -457,6 +494,31 @@ paths:
       security:
       - BearerAuth: []
       summary: Get team by UUID
+      tags:
+      - Teams
+    put:
+      consumes:
+      - application/json
+      description: "Updates an existing team's details by its UUID. \U0001F512 Requires
+        role: **admin**"
+      parameters:
+      - description: Team UUID
+        in: path
+        name: uuid
+        required: true
+        type: string
+      - description: Updated team details
+        in: body
+        name: team
+        required: true
+        schema:
+          $ref: '#/definitions/model.TeamUpdate'
+      responses:
+        "200":
+          description: Team updated successfully
+      security:
+      - BearerAuth: []
+      summary: Update team by UUID
       tags:
       - Teams
   /teams/add-users:
@@ -500,6 +562,7 @@ paths:
           description: User removed from team successfully
       security:
       - BearerAuth: []
+      summary: Remove user from team
       tags:
       - Teams
   /users:
